--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <% end %>
   <% if flash[:alert]%>
   <div class="notification is-danger globalnotification">
-  <p class="alert"> <%= alert ></p>
+  <p class="alert"> <%= alert %></p>
   </div>
   <% end %>
     <%= yield %>
