--- a/app/views/tweets/_feed.html.erb
+++ b/app/views/tweets/_feed.html.erb
@@ -1,43 +1,49 @@
 <div class="column is-half">
-  <article class="media box">
-    <figure class="media-left">
-      <p class="image is-64x64">
-        <img src="https://bulma.io/images/placeholders/64x64.png">
-      </p>
-    </figure>
-    <div class="media-content">
-      <%= render 'tweets/form' %>
-    </div>
-  </article>
+  <% if user_signed_in? %>
+	<article class="media box">
+		<figure class="media-left">
+			<p class="image is-64x64">
+				 <img src="https://bulma.io/images/placeholders/64x64.png">
+			</p>
+		</figure>
+		<div class="media-content">
+			 <%= render 'tweets/form' %>
+		</div>
+	</article>
+  <% end %>
+
+
 <% @tweets.each do | tweet | %>
   <div class="box">
-    <article class="media">
-      <div class="media-left">
-        <figure class="image is-64x64">
-          <img src="https://bulma.io/images/placeholders/64x64.png">
-        </figure>
-      </div>
-      <div class="media-content">
-        <div class="content">
-          <strong>Alert</strong><br>
-          <small>@aratori</small><br>
-          <p><%= tweet.tweet %></p>
-        </div>
-      </div>
-      <nav class="level">
-        <div class="level-left is-mobile">
-          <%= link_to tweet, class: "level-item" do%>
-            <span class="icon"><i class="fa fa-link" area-hidden="true"></i></span>
-          <% end %>
-          <%= link_to edit_tweet_path(tweet), class: "level-item" do%>
-            <span class="icon"><i class="fa fa-pencil" area-hidden="true"></i></span>
-          <% end %>
-          <%= link_to tweet, method: :delete, data: { confirm: "Please confirm that you want to delete this Tweet"} do%>
-            <span class="icon"><i class="fa fa-trash-o" area-hidden="true"></i></span>
-          <% end %>
-        </div>
-      </nav>
-    </article>
+  	<article class="media">
+  		<div class="media-left">
+  			<figure class="image is-64x64">
+  				 <img src="https://bulma.io/images/placeholders/64x64.png">
+  			</figure>
+  		</div>
+  		<div class="media-content">
+  			<div class="content">
+  				<strong><%= tweet.user.name if tweet.user %></strong><br />
+  				<small> <%= tweet.user.username if tweet.user %> </small><br/>
+  				<p><%= tweet.tweet %></p>
+  			</div>
+        <% if user_signed_in? && current_user.id == tweet.user_id %>
+  			<nav class="level">
+  				<div class="level-left is-mobile">
+  					<%= link_to tweet, class: "level-item" do %>
+  					  <span class="icon"><i class="fa fa-link"></i></span>
+  					<% end %>
+  					<%= link_to edit_tweet_path(tweet), class: "level-item" do %>
+  					  <span class="icon"><i class="fa fa-pencil"></i></span>
+  					<% end %>
+  					<%= link_to tweet, method: :delete, data: { confirm: "Are you sure you want to delete this tweeet?" } do %>
+  							<span class="icon"><i class="fa fa-trash-o" ></i></span>
+  					<% end %>
+  				</div>
+  			</nav>
+        <% end %>
+  		</div>
+  	</article>
   </div>
 <% end %>
 </div>
